# cloudlens

./: .cloudlens_history  .coverage  .coveragerc  .cursorrules  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  =1.3.0  =3.3.0  ABORT_ERROR_FIX.md  ACCOUNT_ID_FIX_REPORT.md  ACCOUNT_ID_FIX_VERIFIED.md  ACK_API_ISSUE.md  ACK_DETAILS_ISSUE_SUMMARY.md  ACK_FIX_VERIFICATION.md  ACK_TEST_RESULT.md  ACTIONABLE_REFACTORING_PLAN.md  ALL_DISCOUNT_ANALYSIS_COMPLETE.md  ALL_OPTIMIZATIONS_COMPLETED.md  ALL_RESOURCES_ADDED_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_FIXES.md  BILL_OPTIMIZATION_REPORT.md  BUDGET_ALERT_EMAIL_FIX.md  CACHE_OPTIMIZATION_REPORT.md  CACHE_VALIDATION_DESIGN.md  CACHE_VALIDATION_IMPLEMENTATION.md  CACHE_VALIDATION_QUICKREF.md  CHANGELOG.md  CLEANUP_REPORT.md  CLI_TEST_REPORT.md  CODE_OPTIMIZATION_REPORT.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_TEST_REPORT.md  COMPLETE_TEST_REPORT_FINAL.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  COST_ANALYSIS_FEATURE.md  (+215 more)
.antigravity/: rules
.cursor/: settings.json
cli/: main.py  utils.py
completions/: cl-complete.bash  cl-complete.zsh
config/: config.json.example  schedules.yaml.example
core/: __init__.py  actiontrail_helper.py  ai_optimizer.py  alert_engine.py  alert_manager.py  analyzer_registry.py  aps_scheduler.py  async_provider.py  audit_logger.py  backup_manager.py  base_analyzer.py  bill_fetcher.py  bill_storage.py  bill_storage_mysql.py  budget_manager.py  cache.py  cache_manager.py  cis_compliance.py  cis_compliance_extensions.py  concurrent_helper.py  config.py  config_helper.py  config_manager.py  config_schema.py  constants.py  context.py  cost_allocation.py  cost_analyzer.py  cost_predictor.py  cost_trend_analyzer.py  cve_matcher.py  dashboard.py  dashboard_manager.py  dashboard_manager_mysql.py  data_engine.py  database.py  db_connection_monitor.py  db_manager.py  db_performance.py  discount_analyzer.py  (+33 more)
docs/: API_REFACTORING_ASSESSMENT.md  API_REFACTORING_COMPLETION_REPORT.md  API_REFACTORING_FIX_REPORT.md  API_REFACTORING_PROGRESS.md  API_REFERENCE.md  ARM64_SUPPORT.md  AWS_DEPLOYMENT_GUIDE.md  AWS_ECS_DEPLOYMENT.md  BACKEND_SERVICE_TROUBLESHOOTING.md  BILL_AUTO_FETCH_GUIDE.md  CHANGELOG.md  COMPREHENSIVE_ROADMAP_2026.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN_2026.md  DISCOUNT_ANALYSIS_GUIDE.md  DISCOUNT_ANALYSIS_TEST_CHECKLIST.md  DOCKER_HUB_GITHUB_SETUP.md  DOCKER_HUB_SETUP.md  DOCKER_HUB_TOKEN_QUICK_GUIDE.md  LOCAL_TESTING_GUIDE.md  MICROSERVICES_ARCHITECTURE.md  OPTIMIZATION_ROADMAP_V2.md  PLUGIN_DEVELOPMENT.md  PRODUCT_CAPABILITIES.md  PRODUCT_DESIGN_2026.md  PRODUCT_INTRODUCTION.md  PROJECT_STRUCTURE.md  Q1_CHATBOT_TROUBLESHOOTING.md  Q1_CHATBOT_UI_IMPROVEMENTS.md  Q1_DEPLOYMENT_CHECKLIST.md  Q1_IMPLEMENTATION_SUMMARY.md  Q1_TEST_REPORT.md  Q1_TROUBLESHOOTING.md  Q1_USER_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_FOR_DEVELOPERS.md  QUICK_START_FOR_USERS.md  (+23 more)
examples/: README.md  advanced_usage.py  basic_usage.py
migrations/: 001_remove_budget_records.sql  002_add_performance_indexes.sql  README.md  add_anomaly_table.sql  add_chatbot_tables.sql  add_indexes.sql  add_performance_indexes.sql  migrate.py  optimize_indexes_week4.sql  verify_schema.py
models/: resource.py
resource_modules/: __init__.py  ack_analyzer.py  cdn_analyzer.py  clickhouse_analyzer.py  cost_analyzer.py  discount_analyzer.py  disk_analyzer.py  dns_analyzer.py  eci_analyzer.py  ecs_analyzer.py  eip_analyzer.py  mongodb_analyzer.py  nas_analyzer.py  nat_analyzer.py  network_analyzer.py  oss_analyzer.py  polardb_analyzer.py  rds_analyzer.py  redis_analyzer.py  slb_analyzer.py  vpc_analyzer.py  vpn_analyzer.py
scripts/: analyze_all_tenants.py  analyze_ip_traffic.py  analyze_slow_queries.py  apply_indexes.sh  aws-deploy.sh  build-and-start.sh  build.sh  check_quality.py  (+73 more)
(+430 files in other folders)
