[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E203"]
line-length = 120

[tool.ruff.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "7.0"
addopts = "-ra -v --cov=cloudlens.core --cov=web/backend --cov-report=html:htmlcov --cov-report=term-missing --cov-fail-under=60 --durations=10"
pythonpath = "."
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 慢速测试",
    "billing: 账单相关测试",
    "api: API测试",
    "database: 数据库测试",
]

[tool.coverage.run]
source = ["cloudlens/core", "web/backend"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/docs/examples/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 120
target-version = ['py38']
extend-exclude = '''
/(
  migrations
  | htmlcov
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*", "*/venv/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true
